k8s/altair/infrastructure/extras/intel-gpu-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: intel-gpu-plugin
  namespace: intel-gpu-plugin
  labels:
    app: intel-gpu-plugin
spec:
  selector:
    matchLabels:
      app: intel-gpu-plugin
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: intel-gpu-plugin
    spec:
      containers:
        - name: intel-gpu-plugin
          image: intel/intel-gpu-plugin:0.37.1@sha256:004641b2547d58f1eadce58473fa160ad71377de1eb588cf1f82832387bf3e33
          imagePullPolicy: IfNotPresent
          args:
            - -shared-dev-num=2
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "45Mi"
              cpu: 40m
            limits:
              memory: "90Mi"
              cpu: 100m
          volumeMounts:
            - name: devfs
              mountPath: /dev/dri
              readOnly: true
            - name: sysfsdrm
              mountPath: /sys/class/drm
              readOnly: true
            - name: kubeletsockets
              mountPath: /var/lib/kubelet/device-plugins
            - name: cdipath
              mountPath: /var/run/cdi
      volumes:
        - name: devfs
          hostPath:
            path: /dev/dri
        - name: sysfsdrm
          hostPath:
            path: /sys/class/drm
        - name: kubeletsockets
          hostPath:
            path: /var/lib/kubelet/device-plugins
        - name: cdipath
          hostPath:
            path: /var/run/cdi
            type: DirectoryOrCreate
      nodeSelector:
        kubernetes.io/arch: amd64
