k8s/altair/infrastructure/extras/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.greedo.net`)
      kind: Rule
      middlewares:
        - name: infra-admin-oidc-auth
          namespace: kube-system
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: greedo-net-wildcard-tls
